# grace-notes

./: .gitignore  .swiftlint.yml  AGENTS.md  CHANGELOG.md  LICENSE  LOCALIZATION.md  LOCALIZATION_CLEANUP_SUMMARY.md  MEMORY.md  Makefile  README.md  copy-review-full-catalog.txt  gracenotes-dev.toml  l10n-review-overrides.toml
.Jules/: palette.md
Design/: status-icons-figma-handoff.json
FiveCubedMoments/: ContentView.swift  FiveCubedMomentsApp.swift  Info.plist  InfoPlist.xcstrings  Item.swift
FiveCubedMoments.xcodeproj/: project.pbxproj
FiveCubedMomentsTests/: FiveCubedMomentsTests.swift
FiveCubedMomentsUITests/: FiveCubedMomentsUITests.swift  FiveCubedMomentsUITestsLaunchTests.swift  JournalUITests.swift
Scripts/gracenotes-dev/: README.md  SENTRY_WORKFLOW.md  pyproject.toml
Scripts/gracenotes-dev/src/gracenotes_dev/: __init__.py  __main__.py  cli.py  cli_rich.py  config.py  simulator.py  simulator_runtime.py  xcode.py
Scripts/gracenotes-dev/src/gracenotes_dev/cli/: __init__.py  apps.py  config_cmd.py  core.py  doctor_lint.py  l10n_cmd.py  l10n_review.py  l10n_surfaces.py  sentry_cmd.py  sim.py  workflows.py
Scripts/gracenotes-dev/src/gracenotes_dev/sentry/: __init__.py  agent_client.py  branch_ops.py  ci_fix.py  classify.py  cursor_review_fix.py  git_remote.py  github.py  llm_client.py  log_sink.py  merge_conflict.py  merge_logic.py  merge_poll.py  pr_template.py  retry.py  review_comment.py  review_gates.py  runner.py  settings.py  state.py  tui.py
Scripts/gracenotes-dev/tests/: test_cli_surface.py  test_config.py  test_l10n_review.py  test_l10n_surfaces.py  test_sentry.py  test_simulator.py  test_simulator_runtime.py  test_xcode.py
Scripts/gracenotes-dev/tests/fixtures/: l10n-review-overrides.toml  simctl_devicetypes.json  simctl_runtimes.json
(+638 files in other folders)
