[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gracenotes-dev"
version = "0.1.0"
description = "Grace Notes developer CLI (grace) — simulators, xcodebuild, CI helpers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0,<3",
    "rich>=13.7.0,<14",
    "tomlkit>=0.13,<1",
    "typer>=0.12.3,<0.17",
    "tomli>=2.0.1,<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9",
]

[project.scripts]
grace = "gracenotes_dev.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gracenotes_dev"]

[tool.hatch.build.targets.wheel.sources]
"src/gracenotes_dev" = "gracenotes_dev"
