[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gracenotes-dev"
version = "0.2.0"
description = "Grace Notes developer CLI (grace) — simulators, xcodebuild, CI helpers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0,<3",
    "rich>=13.7.0,<14",
    "textual>=0.75.0,<1",
    "tomlkit>=0.13,<1",
    "typer>=0.12.3,<0.17",
    "tomli>=2.0.1,<3; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "ruff>=0.9.0,<0.14",
]

[project.scripts]
grace = "gracenotes_dev.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gracenotes_dev"]

[tool.hatch.build.targets.wheel.sources]
"src/gracenotes_dev" = "gracenotes_dev"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["gracenotes_dev"]
